# share_ros1_ros2_lib_demo

./: .gitignore  COPYING  README.md
src/bar_ros/: CMakeLists.txt  package.xml
src/bar_ros/ros1/: ros.cmake
src/bar_ros/ros1/src/: bar_node.cpp
src/bar_ros/ros2/: ros.cmake
src/bar_ros1/: CMakeLists.txt  package.xml
src/bar_ros2/: CMakeLists.txt  package.xml
src/bar_ros2/src/: bar_node.cpp
src/lib_foo/: CMakeLists.txt  package.xml
src/lib_foo/cmake/: lib_foo-config.cmake.in
src/lib_foo/include/lib_foo/: foo.h
src/lib_foo/src/: foo.cpp
