<?xml version="1.0"?>
<package format="2">
  <name>lib_foo</name>
  <version>0.0.1</version>
  <description>A dummy lib to make pure CMake lib to work woth ROS 1 and ROS 2</description>
  <maintainer email="rre@robopec.com">rre</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
